// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create LinkToLDAPProviderModal should search for groups with no results found 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-top-medium"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchLabel
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="bp3-form-group bp3-disabled select"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="groupSearch"
                placeholder="common.searchByNamePlaceholder"
                type="text"
                value="dummy search"
              />
            </div>
          </div>
        </div>
        <button
          class="bp3-button bp3-small Button--button StyledProps--font StyledProps--main StyledProps--padding-xsmall Button--with-current-color Button--variation Button--variation-secondary"
          data-testid="searchLdapGroup"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            search
          </span>
        </button>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi StyledProps--color StyledProps--color-grey400"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchInfo
      </p>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-body StyledProps--color StyledProps--color-grey700 StyledProps--padding-medium"
      >
        common.filters.noResultsFound
      </p>
    </div>
  </div>
</div>
`;

exports[`Create LinkToLDAPProviderModal should search the form for groups and render error 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-top-medium"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchLabel
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="bp3-form-group bp3-disabled select"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="groupSearch"
                placeholder="common.searchByNamePlaceholder"
                type="text"
                value="dummy search"
              />
            </div>
          </div>
        </div>
        <button
          class="bp3-button bp3-small Button--button StyledProps--font StyledProps--main StyledProps--padding-xsmall Button--with-current-color Button--variation Button--variation-secondary"
          data-testid="searchLdapGroup"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            search
          </span>
        </button>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi StyledProps--color StyledProps--color-grey400"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchInfo
      </p>
      <div
        class="StyledProps--font StyledProps--main PageError--pageError StyledProps--flex StyledProps--flex-align-center-center"
        style="width: 100%; height: 100%;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="align-items: center; width: 500px;"
        >
          <span
            class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500"
            icon="error"
          >
            <svg
              data-icon="error"
              height="32"
              viewBox="0 0 20 20"
              width="32"
            >
              <desc>
                error
              </desc>
              <path
                d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-align-center StyledProps--color StyledProps--color-red500"
          >
            api call resulted in error
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create LinkToLDAPProviderModal should search the form for groups and render error 2`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-top-medium"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchLabel
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="bp3-form-group bp3-disabled select"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="groupSearch"
                placeholder="common.searchByNamePlaceholder"
                type="text"
                value="dummy search"
              />
            </div>
          </div>
        </div>
        <button
          class="bp3-button bp3-small Button--button StyledProps--font StyledProps--main StyledProps--padding-xsmall Button--with-current-color Button--variation Button--variation-secondary"
          data-testid="searchLdapGroup"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            search
          </span>
        </button>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi StyledProps--color StyledProps--color-grey400"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchInfo
      </p>
      <div
        class="StyledProps--font StyledProps--main PageError--pageError StyledProps--flex StyledProps--flex-align-center-center"
        style="width: 100%; height: 100%;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="align-items: center; width: 500px;"
        >
          <span
            class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500"
            icon="error"
          >
            <svg
              data-icon="error"
              height="32"
              viewBox="0 0 20 20"
              width="32"
            >
              <desc>
                error
              </desc>
              <path
                d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-align-center StyledProps--color StyledProps--color-red500"
          >
            api call resulted in error
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create LinkToLDAPProviderModal should search the form for groups and render table 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-top-medium"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchLabel
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="bp3-form-group bp3-disabled select"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="groupSearch"
                placeholder="common.searchByNamePlaceholder"
                type="text"
                value="dummy search"
              />
            </div>
          </div>
        </div>
        <button
          class="bp3-button bp3-small Button--button StyledProps--font StyledProps--main StyledProps--padding-xsmall Button--with-current-color Button--variation Button--variation-secondary"
          data-testid="searchLdapGroup"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            search
          </span>
        </button>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi StyledProps--color StyledProps--color-grey400"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchInfo
      </p>
      <div
        class="TableV2--table"
      >
        <div
          class="TableV2--header TableV2--minimal"
          role="row"
        >
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 40%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              name
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 45%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              description
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 15%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              members
            </p>
          </div>
        </div>
        <div
          class="TableV2--body"
        >
          <div
            class="TableV2--row TableV2--minimal"
            role="row"
          >
            <div
              class="TableV2--cells"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 40%;"
              >
                <div
                  class="wrapper"
                >
                  <label
                    class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main"
                  >
                    <input
                      type="radio"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    ldap_usergroup
                  </label>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 45%;"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  tagGroup
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 15%;"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  3
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create LinkToLDAPProviderModal should search the form for groups and render table 2`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-top-medium"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchLabel
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="bp3-form-group bp3-disabled select"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="groupSearch"
                placeholder="common.searchByNamePlaceholder"
                type="text"
                value="dummy search"
              />
            </div>
          </div>
        </div>
        <button
          class="bp3-button bp3-small Button--button StyledProps--font StyledProps--main StyledProps--padding-xsmall Button--with-current-color Button--variation Button--variation-secondary"
          data-testid="searchLdapGroup"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            search
          </span>
        </button>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi StyledProps--color StyledProps--color-grey400"
      >
        rbac.userDetails.linkToSSOProviderModal.groupSearchInfo
      </p>
      <div
        class="TableV2--table"
      >
        <div
          class="TableV2--header TableV2--minimal"
          role="row"
        >
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 40%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              name
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 45%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              description
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 15%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              members
            </p>
          </div>
        </div>
        <div
          class="TableV2--body"
        >
          <div
            class="TableV2--row TableV2--minimal"
            role="row"
          >
            <div
              class="TableV2--cells"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 40%;"
              >
                <div
                  class="wrapper"
                >
                  <label
                    class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main"
                  >
                    <input
                      type="radio"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    ldap_usergroup
                  </label>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 45%;"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  tagGroup
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 15%;"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  3
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
